--- a/package.json
+++ b/package.json
@@ -41,5 +41,8 @@
     "webpack-cli": "^3.3.6",
     "webpack-dashboard": "^3.0.7",
     "webpack-dev-server": "^3.7.2"
+  },
+  "dependencies": {
+    "jquery": "^3.4.1"
   }
 }
