--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@
 /node_modules
 *.min.css
 *.map
+/App/Services/FormBuilder/configurations/custom/*
+/App/Services/FormBuilder/configurations/custom/temp/*
