add-upload-file-from-BO: add files or pictures in formbuilder

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 *.map
 /App/Services/FormBuilder/configurations/custom/*
 /App/Services/FormBuilder/configurations/custom/temp/*
+/App/web/uploads/*
