create-user-settings-conf-installation: generate user configuration files and add User menu entry from the installation. Add style in BO

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /App/Services/FormBuilder/configurations/custom/*
 /App/Services/FormBuilder/configurations/custom/temp/*
 /App/web/uploads/*
+!/App/Services/FormBuilder/configurations/custom/user_settings.json
