--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "**_Contraintes:_** Projet \"from scratch\" utilisant les 5 langages enseignés à la 3WAcademy:           * HTML           * CSS           * Javascript           * PHP           * MySQL",
   "main": "index.js",
   "scripts": {
+    "preinstall": "npx npm-force-resolutions",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
     "start": "webpack-dashboard webpack-dev-server -d --hot --config webpack.config.js --watch",
@@ -22,27 +23,32 @@
   },
   "homepage": "https://github.com/guillaumeg87/portfolio-3Wacademy#readme",
   "devDependencies": {
-    "@babel/core": "^7.7.7",
-    "@babel/preset-env": "^7.7.7",
-    "autoprefixer": "^9.7.3",
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.0",
+    "autoprefixer": "^9.7.4",
     "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "^8.1.0",
     "babel-preset-env": "^1.7.0",
     "css-hot-loader": "^1.4.4",
-    "css-loader": "^3.4.0",
+    "css-loader": "^3.4.2",
     "mini-css-extract-plugin": "^0.8.2",
-    "node-sass": "^4.13.0",
+    "minimist": "^1.2.5",
+    "node-sass": "^4.13.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.3.1",
-    "style-loader": "^1.1.2",
+    "style-loader": "^1.1.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^4.41.5",
-    "webpack-cli": "^3.3.10",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11",
     "webpack-dashboard": "^3.2.0",
-    "webpack-dev-server": "^3.10.1"
+    "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
     "jquery": "^3.4.1"
+  },
+  "resolutions": {
+    "minimist": ">=0.2.1 <1.0.0 || >=1.2.3",
+    "serialize-javascript": ">=2.1.1"
   }
 }
