feature/add-style-home-page: add style on home page, implement media query

--- a/App/Front/Configurations/home_configuration.json
+++ b/App/Front/Configurations/home_configuration.json
@@ -6,7 +6,7 @@
   "section_2": {
     "type": "query",
     "content": "parcours_content",
-    "join": ["langage"],
+    "join": ["langage", "techno"],
     "sort": {
       "type": "DESC",
       "column": "date_start"
