--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-preset-env": "^1.7.0",
     "css-hot-loader": "^1.4.4",
     "css-loader": "^3.4.2",
+    "file-loader": "^6.0.0",
     "mini-css-extract-plugin": "^0.8.2",
     "minimist": "^1.2.5",
     "node-sass": "^4.13.1",
