--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "file-loader": "^6.0.0",
     "mini-css-extract-plugin": "^0.8.2",
     "minimist": "^1.2.5",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.3.1",
@@ -43,10 +43,11 @@
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-dashboard": "^3.2.0",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "jquery": "^3.5.0"
+    "jquery": "^3.5.0",
+    "serialize-javascript": "^4.0.0"
   },
   "resolutions": {
     "minimist": ">=0.2.1 <1.0.0 || >=1.2.3",
