--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "watch": "webpack --watch",
     "start": "webpack-dashboard webpack-dev-server -d --hot --config webpack.config.js --watch",
     "dev": "webpack",
-    "prod": "NODE_ENV=production webpack --progress"
+    "prod": "NODE_ENV=prod webpack --mode=production -p"
   },
   "repository": {
     "type": "git",
@@ -31,7 +31,9 @@
     "babel-preset-env": "^1.7.0",
     "css-hot-loader": "^1.4.4",
     "css-loader": "^3.4.2",
-    "file-loader": "^6.0.0",
+    "file-loader": "^6.2.0",
+    "json-loader": "^0.5.7",
+    "json5-loader": "^4.0.1",
     "mini-css-extract-plugin": "^0.8.2",
     "minimist": "^1.2.5",
     "node-sass": "^4.14.1",
@@ -40,7 +42,7 @@
     "sass-loader": "^7.3.1",
     "style-loader": "^1.1.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^4.42.0",
+    "webpack": "^4.44.2",
     "webpack-cli": "^3.3.11",
     "webpack-dashboard": "^3.2.0",
     "webpack-dev-server": "^3.11.0"
